# pyCC

./: .gitignore  .tcampos-config  AI_Arena_API_抓取指南.md  IDENTITY.md  MEMORY.md  PRINCIPLES.md  PROGRESS.md  USER.md  fix-bundled-skills.py  fix-claude-code-build.ps1  fix-claude-code-build.py  fix-color-diff.py  fix-download-ripgrep.py  fix-file-persistence-types.py  fix-prepare-hook.py  fix-scripts-download-ripgrep.py  openclaw-source-analysis.md  openclaw-source-full-analysis.md  openclaw-source-full-report-v2.md  setup-claude-code-build.ps1  setup-hunyuan.py  tencent_docs_report.js
claude-code-python/: .gitignore  PROGRESS.md  README.md  pyproject.toml
claude-code-python/scripts/: smoke_test_hunyuan.py
claude-code-python/src/claude_code/: __init__.py  _version.py  commands.py  context.py  cost_hook.py  cost_tracker.py  history.py  ink.py  main.py  project_onboarding_state.py  query.py  query_engine.py  repl.py  setup.py  task.py  tasks.py  tasks_module.py  tool.py  tools.py  utils.py
claude-code-python/src/claude_code/bootstrap/: __init__.py  state.py
claude-code-python/src/claude_code/bridge/: __init__.py  api.py  bridge_main.py  repl_bridge.py  types.py
claude-code-python/src/claude_code/cli/: __init__.py  print.py
claude-code-python/src/claude_code/commands/: __init__.py  advisor.py  bridge_kick.py  brief.py  bug.py  clear.py  commit.py  commit_push_pr.py  compact.py  config.py  cost.py  create_moved_to_plugin_command.py  doctor.py  help.py  init.py  init_verifiers.py  insights.py  login.py  logout.py  resume.py  review.py  security_review.py  status.py  version.py
claude-code-python/src/claude_code/constants/: __init__.py  common.py  files.py  messages.py  product.py  prompts.py  tools.py
claude-code-python/src/claude_code/entrypoints/: __init__.py  agent_sdk_types.py  init.py  mcp.py  sandbox_types.py
claude-code-python/src/claude_code/hooks/: __init__.py  post_tool_use.py  pre_tool_use.py  registry.py  types.py
claude-code-python/src/claude_code/keybindings/: __init__.py  registry.py  types.py
claude-code-python/src/claude_code/memdir/: paths.py
claude-code-python/src/claude_code/migrations/: __init__.py
claude-code-python/src/claude_code/services/: __init__.py  analytics.py  away_summary.py  claude_ai_limits.py  claude_ai_limits_hook.py  compact.py  diagnostic_tracking.py  internal_logging.py  mcp.py  mock_rate_limits.py  notifier.py  oauth.py  prevent_sleep.py  query.py  rate_limit_messages.py  rate_limit_mocking.py  token_estimation.py  vcr.py  voice.py  voice_keyterms.py  voice_stream_s_t_t.py
claude-code-python/src/claude_code/skills/: __init__.py  registry.py  types.py
claude-code-python/src/claude_code/state/: __init__.py  session_state.py
claude-code-python/src/claude_code/tasks/: __init__.py  pill_label.py  stop_task.py  types.py
claude-code-python/src/claude_code/tools/: __init__.py  exit_plan_mode_tool.py  file_edit_tool.py  file_move_tool.py  file_read_tool.py  file_write_tool.py  glob_tool.py  grep_tool.py  notebook_edit_tool.py  notebook_read_tool.py  send_message_tool.py  task_tool.py  task_tools.py  todo_read_tool.py  todo_write_tool.py  tool_executor.py  tool_registry.py  tools_utils.py  utils.py  web_fetch_tool.py  web_search_tool.py
claude-code-python/src/claude_code/types/: __init__.py  command.py  ids.py  permissions.py  plugin.py
claude-code-python/src/claude_code/utils/: __init__.py  abort.py  abort_controller.py  activity_manager.py  advisor.py  agent_context.py  agent_id.py  agent_swarms.py  agent_swarms_enabled.py  agentic_session_search.py  analyze_context.py  analyze_context_core.py  ansi_convert.py  ansi_to_png.py  ansi_to_svg.py  api.py  api_preconnect.py  api_utils.py  apple_terminal_backup.py  argument_substitution.py  array.py  asciicast.py  attachments.py  attribution.py  auth.py  auth_file_descriptor.py  auth_portable.py  auto_mode_denials.py  auto_updater.py  aws.py  aws_auth_status_manager.py  background_housekeeping.py  betas.py  billing.py  binary_check.py  browser.py  buffered_writer.py  bundled_mode.py  ca_certs.py  ca_certs_config.py  (+292 more)
claude-code-python/tests/: test_basic.py  test_batch14_utils.py  test_integration.py  test_new_tools.py
claude-code-rust/: Cargo.toml  PROGRESS.md  README.md
claude-code-rust/crates/claude-cli/: Cargo.toml
claude-code-rust/crates/claude-cli/src/: main.rs
claude-code-rust/crates/claude-commands/: Cargo.toml
claude-code-rust/crates/claude-commands/src/: clear.rs  compact.rs  config.rs  cost.rs  doctor.rs  help.rs  lib.rs  resume.rs  status.rs  version.rs
claude-code-rust/crates/claude-constants/: Cargo.toml
claude-code-rust/crates/claude-constants/src/: api_limits.rs  betas.rs  error_ids.rs  figures.rs  files.rs  lib.rs  messages.rs  product.rs  system.rs
claude-code-rust/crates/claude-services/: Cargo.toml
claude-code-rust/crates/claude-services/src/: compact.rs  lib.rs  notifier.rs  query.rs  token_estimation.rs
claude-code-rust/crates/claude-tools/: Cargo.toml
claude-code-rust/crates/claude-tools/src/: agent_tool.rs  lib.rs  tool_base.rs
claude-code-rust/crates/claude-types/: Cargo.toml
claude-code-rust/crates/claude-types/src/: command.rs  events.rs  hooks.rs  ids.rs  lib.rs  logs.rs  message.rs  permissions.rs  plugin.rs
claude-code-rust/crates/claude-utils/: Cargo.toml
claude-code-rust/crates/claude-utils/src/: abort.rs  agent_id.rs  array.rs  betas.rs  binary_check.rs  buffered_writer.rs  clipboard.rs  compact.rs  cwd.rs  diff.rs  env_utils.rs  errors.rs  file.rs  format.rs  git.rs  hash.rs  json.rs  lib.rs  log_util.rs  memoize.rs  messages.rs  model.rs  model_cost.rs  path.rs  paths.rs  permissions.rs  session_storage.rs  set.rs  settings.rs  sleep.rs  string_utils.rs  system_prompt.rs  tokens.rs  truncate.rs  uuid.rs  words.rs
(+899 files in other folders)
