[package]
name = "claude-commands"
version.workspace = true
edition.workspace = true

[dependencies]
claude-types = { workspace = true }
claude-constants = { workspace = true }
claude-utils = { workspace = true }
claude-tools = { workspace = true }
claude-services = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
