[package]
name = "claude-tools"
version.workspace = true
edition.workspace = true

[dependencies]
claude-types = { workspace = true }
claude-constants = { workspace = true }
claude-utils = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
